--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <g id="gameOver" visibility="hidden">
           <rect x="26" y="120" fill="white" height="48" width="149"></rect>
           <text x="36" y="150">Game Over</text>
+          <text x="46" y="150" style="font-size: 15px;">Click anywhere to restart!</text>
         </g>
       </svg>
       <div id="sideBar" class="flex col">
