--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <body>
     <h1>Tetris</h1>
     <main id="main" class="flex row">
+      <div id="sideBar" class="flex col">
+        <div class="text">
+          <span class="left">Hold</span>
+        </div>
+        <svg id="svgHold"></svg>
+      </div>
       <svg id="svgCanvas">
         <!-- game over text box -->
         <g id="gameOver" visibility="hidden">
