Added instruction text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,35 @@
           <span class="left">Hold</span>
         </div>
         <svg id="svgHold"></svg>
+        <div class="flex col" id="info">
+          <div class="text">
+            <span class="left">Control: </span>
+          </div>
+          <div class="text">
+            <span class="left">A: </span>
+            <span class="right">Left</span>
+          </div>
+          <div class="text">
+            <span class="left">D: </span>
+            <span class="right">Right</span>
+          </div>
+          <div class="text">
+            <span class="left">W: </span>
+            <span class="right">Rotate Clockwise</span>
+          </div>
+          <div class="text">
+            <span class="left">S: </span>
+            <span class="right">Soft Drop</span>
+          </div>
+          <div class="text">
+            <span class="left">Space: </span>
+            <span class="right">Hard Drop</span>
+          </div>
+          <div class="text">
+            <span class="left">C: </span>
+            <span class="right">Hold</span>
+          </div>
+        </div>
       </div>
       <svg id="svgCanvas">
         <!-- game over text box -->
